default.css
:root{
    --mainColor:#eaeaea;
    --secondaryColor:#fff;

    --borderColor:#c1c1c1;

    --mainText:black;
    --secondaryText:#4b5156;
    --buttonColor: black;
}

html, body {
    padding: 0;
    margin: 0;
    font-family: 'Noto Sans', sans-serif;
}

h1, h2, h3, h4, h5, h6, strong {
    color: var(--mainText);
}
h1 { font-size: 56px;}
h2 { font-size: 36px;}
h3 { font-size: 28px;}
h4 { font-size: 24px;}
h5 { font-size: 20px;}
h6 { font-size: 16px;}


ul {
    display: flex;
    flex-direction: row;
}

li {
    padding: 10px;
    list-style: none;
}

p, li, span, label, input, textarea{
    color: var(--secondaryText);
    font-family: 'Noto Sans', sans-serif;
}

.s1 {
    background-color: var(--mainColor);
    border-bottom: 1px solid var(--borderColor);
    overflow: auto;
    padding: 30px;
}

.s2 {
    background-color: var(--secondaryColor);
    border-bottom: 1px solid var(--borderColor);
    overflow: auto;
}

.main-container {
    width:1200px;
    margin: 0 auto;
}

.section-wrapper {
    display: grid;
    grid-template-columns: 1fr 1fr;
    padding: 0 20px 0 20px;
    gap: 20px;
}

.item-wrapper {
    grid-column: span 2;
    display: grid;
    grid-template-columns: repeat(auto-fit, 320px);
    gap: 20px;
    justify-content: center;
    margin-bottom: 20px;
}

.project-item {
    border: 1px solid var(--borderColor);
    border-radius: 5px;
    box-shadow: 10px 10px 25px 0px rgba(0,0,0,0.65);
}

.screenshot {
    min-height: 210px;
    border: 1px solid black;
}

.proj-text {
    padding: 10px;
    background-color: white;
}

.link-btn {
    display: inline-block;
    padding: 0.35em 1.2em;
    border: 0.1em solid black;
    margin: 0 0.3em 0.3em 0;
    border-radius: 0.12em;
    box-sizing: border-box;
    text-align: center;
    transition: all 0.2s;
    text-decoration: none;
    color: black;
}

.link-btn:hover {
      color: white;
      background-color: black;
}

.exp-item {
    border: 0.25px solid var(--borderColor);
    padding: 20px;
    border-radius: 5px;
    margin: 20px;
    box-shadow: 10px 10px 25px 0px rgba(0,0,0,0.65);
}

#prof-pic {
    border-radius: 10%;
    width: 100%;
    height: auto;
    box-shadow: 10px 10px 25px 0px rgba(0,0,0,0.65);

}

.left-column {
    margin: auto;
}
.right-column {
    margin: auto;
}

a {
    text-decoration: none;
    transition: all 0.2s;
    color: orangered;
}
a:hover {
    color: blue;
}

@media screen and (max-width: 1200px) {
    .main-container{
        width: 95%;
    }
    .left-column {
        margin-right: 20px;
    }
    .section-wrapper {
        width:95%;
        grid-template-columns: repeat(auto-fit, 320px);
    }
}

.vertical-form {
    display: grid;
    grid-template-columns: 1fr;
    gap: 10px;
    background-color: var(--mainColor);
    border: 0.5px solid var(--borderColor);
    padding: 10px;
    border-radius: 5px;
}

.form-label {
    padding-top: 10px;
    margin-left: 10px;
}

.form-input {
    min-height: 40px;
    margin-left: 10px;
    margin-right: 10px;
    border: 1px solid var(--borderColor);
    border-radius: 5px
}

textarea {
    resize:vertical;
    margin-left: 10px;
    margin-right: 10px;
    border-radius: 5px;
    border: 1px solid var(--borderColor);
    min-height: 100px;
}

#submit-btn {
    margin-top: 10px;
    width: 100%;
    padding-top: 10px;
    padding-bottom: 10px;
    color: #fff;
    border: none;
    background-color: black;
    border-radius: 5px;
}

.bar {
    background-color: white;
    margin-top: 11px;
    border: 1px solid var(--borderColor)
  }
.bar>div {
    background-color: black;
    height: 10px;
 }
.blTextBlock {
    padding: 3% 0px 3% 0px;
}

.skills-wrapper {
    min-width: 200px;
}

/* 

div {
    border: 0.5px dashed lightcoral;
} */

